Added logout button and more navigation blocks

--- a/src/Resources/translations/glynn-theme.en.yaml
+++ b/src/Resources/translations/glynn-theme.en.yaml
@@ -6,6 +6,7 @@ site:
         admin: Admin
         login: Login
         title: Glynn site
+        logout: Logout
 admin:
     head:
         title: Glynn admin
